adapt build system for plain PMDK for all the apps
Signed-off-by: dimstav23 <dimstav23@gmail.com>

--- a/PM_phoenix-2.0/tests/histogram/Makefile
+++ b/PM_phoenix-2.0/tests/histogram/Makefile
@@ -46,16 +46,16 @@ default: all
 all: $(PROGS)
 
 histogram: $(HIST_OBJS) $(LIB_DEP)
-	$(CC) $(CFLAGS) -o $@ $(HIST_OBJS) $(LIBS)
+	$(CC) $(CFLAGS) -o $@ $(HIST_OBJS) -L${PMDKSRC}/nondebug/ $(LIBS) -DSPP_OFF
 
 histogram-seq: $(HIST_SEQ_OBJS)
-	$(CC) $(CFLAGS) -o $@ $(HIST_SEQ_OBJS) $(LIBS)
+	$(CC) $(CFLAGS) -o $@ $(HIST_SEQ_OBJS) -L${PMDKSRC}/nondebug/ $(LIBS) -DSPP_OFF
 
 histogram-pthread: $(HIST_PTHREAD_OBJS)
-	$(CC) $(CFLAGS) -o $@ $(HIST_PTHREAD_OBJS) $(LIBS)
+	$(CC) $(CFLAGS) -o $@ $(HIST_PTHREAD_OBJS) -L${PMDKSRC}/nondebug/ $(LIBS) -DSPP_OFF
 
 %.o: %.c
-	$(CC) $(CFLAGS) -c $< -o $@ -I$(HOME)/$(INC_DIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -I$(HOME)/$(INC_DIR) -I${PMDKSRC}/include/ -DSPP_OFF
 
 clean:
 	rm -f $(PROGS) $(HIST_OBJS) $(HIST_SEQ_OBJS) $(HIST_PTHREAD_OBJS)
