--- a/PM_phoenix-2.0/tests/kmeans/Makefile
+++ b/PM_phoenix-2.0/tests/kmeans/Makefile
@@ -46,16 +46,16 @@ default: all
 all: $(PROGS)
 
 kmeans: $(KMEANS_OBJS) $(LIB_DEP)
-	$(CC) $(CFLAGS) -o $@ $(KMEANS_OBJS) $(LIBS)
+	$(CC) $(CFLAGS) -o $@ $(KMEANS_OBJS) -L${PMDKSRC}/nondebug/ $(LIBS) -DSPP_OFF
 
 kmeans-seq: $(KMEANS_SEQ_OBJS)
-	$(CC) $(CFLAGS) -o $@ $(KMEANS_SEQ_OBJS) $(LIBS)
+	$(CC) $(CFLAGS) -o $@ $(KMEANS_SEQ_OBJS) -L${PMDKSRC}/nondebug/ $(LIBS) -DSPP_OFF
 
 kmeans-pthread: $(KMEANS_PTHREAD_OBJS)
-	$(CC) $(CFLAGS) -o $@ $(KMEANS_PTHREAD_OBJS) $(LIBS)
+	$(CC) $(CFLAGS) -o $@ $(KMEANS_PTHREAD_OBJS) -L${PMDKSRC}/nondebug/ $(LIBS) -DSPP_OFF
 	
 %.o: %.c
-	$(CC) $(CFLAGS) -c $< -o $@ -I$(HOME)/$(INC_DIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -I$(HOME)/$(INC_DIR) -I${PMDKSRC}/include/ -DSPP_OFF
 
 clean:
 	rm -f $(PROGS) $(KMEANS_OBJS) $(KMEANS_SEQ_OBJS) $(KMEANS_PTHREAD_OBJS)
