adapt the memory allocation functions in the phoenix library to use the pmemobj API
Signed-off-by: dimstav23 <dimstav23@gmail.com>

--- a/PM_phoenix-2.0/src/Makefile
+++ b/PM_phoenix-2.0/src/Makefile
@@ -67,7 +67,7 @@ $(LIB_PHOENIX).so: $(OBJS)
 	$(CC) --shared -o $@ $(OBJS)
 
 %.o: %.c *.h
-	$(CC) $(CFLAGS) -c $< -o $@ -I$(HOME)/$(INC_DIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -I$(HOME)/$(INC_DIR) -I${PMDKSRC}/include/ -DSPP_OFF
  
 clean:
 	rm -f $(HOME)/$(LIB_DIR)/$(TARGET) $(TARGET) $(OBJS)
