add the src as an include dir so that the tests can find the definition of mem_* functions and do not assume it returns an int which can cause issues
Signed-off-by: dimstav23 <dimstav23@gmail.com>

--- a/PM_phoenix-2.0/tests/linear_regression/Makefile
+++ b/PM_phoenix-2.0/tests/linear_regression/Makefile
@@ -55,7 +55,7 @@ linear_regression-pthread: $(L_REG_PTHREAD_OBJS)
 	$(CC) $(CFLAGS) -o $@ $(L_REG_PTHREAD_OBJS) -L${PMDKSRC}/nondebug/ $(LIBS) -DSPP_OFF
 
 %.o: %.c
-	$(CC) $(CFLAGS) -c $< -o $@ -I$(HOME)/$(INC_DIR) -I${PMDKSRC}/include/ -DSPP_OFF
+	$(CC) $(CFLAGS) -c $< -o $@ -I$(HOME)/$(INC_DIR) -I$(HOME)/$(SRC_DIR) -I${PMDKSRC}/include/ -DSPP_OFF
 
 clean:
 	rm -f $(PROGS) $(L_REG_OBJS) $(L_REG_SEQ_OBJS) $(L_REG_PTHREAD_OBJS)
