--- a/PM_phoenix-2.0/tests/matrix_multiply/Makefile
+++ b/PM_phoenix-2.0/tests/matrix_multiply/Makefile
@@ -55,7 +55,7 @@ matrix_multiply-pthread: $(MM_PTHREAD_OBJS)
 	$(CC) $(CFLAGS) -o $@ $(MM_PTHREAD_OBJS) -L${PMDKSRC}/nondebug/ $(LIBS) -DSPP_OFF
 
 %.o: %.c
-	$(CC) $(CFLAGS) -c $< -o $@ -I$(HOME)/$(INC_DIR) -I${PMDKSRC}/include/ -DSPP_OFF
+	$(CC) $(CFLAGS) -c $< -o $@ -I$(HOME)/$(INC_DIR) -I$(HOME)/$(SRC_DIR) -I${PMDKSRC}/include/ -DSPP_OFF
 
 clean:
 	rm -f $(PROGS) $(MM_OBJS) $(MM_SEQ_OBJS) $(MM_PTHREAD_OBJS)
