--- a/PM_phoenix-2.0/tests/kmeans/Makefile
+++ b/PM_phoenix-2.0/tests/kmeans/Makefile
@@ -55,7 +55,7 @@ kmeans-pthread: $(KMEANS_PTHREAD_OBJS)
 	$(CC) $(CFLAGS) -o $@ $(KMEANS_PTHREAD_OBJS) -L${PMDKSRC}/nondebug/ $(LIBS) -DSPP_OFF
 	
 %.o: %.c
-	$(CC) $(CFLAGS) -c $< -o $@ -I$(HOME)/$(INC_DIR) -I${PMDKSRC}/include/ -DSPP_OFF
+	$(CC) $(CFLAGS) -c $< -o $@ -I$(HOME)/$(INC_DIR) -I$(HOME)/$(SRC_DIR) -I${PMDKSRC}/include/ -DSPP_OFF
 
 clean:
 	rm -f $(PROGS) $(KMEANS_OBJS) $(KMEANS_SEQ_OBJS) $(KMEANS_PTHREAD_OBJS)
