Adapt the build system and apply allocation fixes - Add the SPP flags for benchmark compilatio - Change allocations of the pthread_create variables as they are   treated as volatile by SPP - Change the memset and memcpy wrappers of phoenix not to use the   PM version as they are sometimes called for volatile allocations (not   optimal for SPP though)
Signed-off-by: dimstav23 <dimstav23@gmail.com>

--- a/PM_phoenix-2.0/Makefile
+++ b/PM_phoenix-2.0/Makefile
@@ -33,13 +33,17 @@ include Defines.mk
 
 default: all
 
+ifneq ($(SPP_OFF),1)
+SPP_OFF=0
+endif
+
 all: $(TARGET) tests
 
 $(TARGET):
-	@$(MAKE) -C $(SRC_DIR) --no-print-directory
+	@$(MAKE) -C $(SRC_DIR) --no-print-directory SPP_OFF=$(SPP_OFF)
 
 tests:
-	@$(MAKE) -C $(TESTS_DIR) --no-print-directory
+	@$(MAKE) -C $(TESTS_DIR) --no-print-directory SPP_OFF=$(SPP_OFF)
  
 clean:
 	@$(MAKE) -C $(SRC_DIR) clean --no-print-directory
