--- a/PM_phoenix-2.0/tests/matrix_multiply/Makefile
+++ b/PM_phoenix-2.0/tests/matrix_multiply/Makefile
@@ -41,21 +41,25 @@ PROGS = matrix_multiply matrix_multiply-seq matrix_multiply-pthread
 
 .PHONY: default all clean
 
+ifeq ($(SPP_OFF),1)
+SPP_FLAG=-DSPP_OFF
+endif
+
 default: all
 
 all: $(PROGS)
 
 matrix_multiply: $(MM_OBJS) $(LIB_DEP)
-	$(CC) $(CFLAGS) -o $@ $(MM_OBJS) -L${PMDKSRC}/nondebug/ $(LIBS) -DSPP_OFF
+	$(CC) $(CFLAGS) $(SPP_CFLAGS) $(SPP_LDFLAGS) -o $@ $(MM_OBJS) -L${PMDKSRC}/nondebug/ $(LIBS) ${SPP_FLAG}
 	
 matrix_multiply-seq: $(MM_SEQ_OBJS)
-	$(CC) $(CFLAGS) -o $@ $(MM_SEQ_OBJS) -L${PMDKSRC}/nondebug/ $(LIBS) -DSPP_OFF
+	$(CC) $(CFLAGS) $(SPP_CFLAGS) $(SPP_LDFLAGS) -o $@ $(MM_SEQ_OBJS) -L${PMDKSRC}/nondebug/ $(LIBS) ${SPP_FLAG}
 	
 matrix_multiply-pthread: $(MM_PTHREAD_OBJS)
-	$(CC) $(CFLAGS) -o $@ $(MM_PTHREAD_OBJS) -L${PMDKSRC}/nondebug/ $(LIBS) -DSPP_OFF
+	$(CC) $(CFLAGS) $(SPP_CFLAGS) $(SPP_LDFLAGS) -o $@ $(MM_PTHREAD_OBJS) -L${PMDKSRC}/nondebug/ $(LIBS) ${SPP_FLAG}
 
 %.o: %.c
-	$(CC) $(CFLAGS) -c $< -o $@ -I$(HOME)/$(INC_DIR) -I$(HOME)/$(SRC_DIR) -I${PMDKSRC}/include/ -DSPP_OFF
+	$(CC) $(CFLAGS) $(SPP_CFLAGS) -c $< -o $@ -I$(HOME)/$(INC_DIR) -I$(HOME)/$(SRC_DIR) -I${PMDKSRC}/include/ ${SPP_FLAG}
 
 clean:
 	rm -f $(PROGS) $(MM_OBJS) $(MM_SEQ_OBJS) $(MM_PTHREAD_OBJS)
