--- a/PM_phoenix-2.0/tests/string_match/Makefile
+++ b/PM_phoenix-2.0/tests/string_match/Makefile
@@ -41,21 +41,25 @@ PROGS = string_match string_match-seq string_match-pthread
 
 .PHONY: default all clean
 
+ifeq ($(SPP_OFF),1)
+SPP_FLAG=-DSPP_OFF
+endif
+
 default: all
 
 all: $(PROGS)
 
 string_match: $(STR_MATCH_OBJS) $(LIB_DEP)
-	$(CC) $(CFLAGS) -o $@ $(STR_MATCH_OBJS) -L${PMDKSRC}/nondebug/ $(LIBS) -DSPP_OFF
+	$(CC) $(CFLAGS) $(SPP_CFLAGS) $(SPP_LDFLAGS) -o $@ $(STR_MATCH_OBJS) -L${PMDKSRC}/nondebug/ $(LIBS) ${SPP_FLAG}
 
 string_match-seq: $(STR_MATCH_SEQ_OBJS)
-	$(CC) $(CFLAGS) -o $@ $(STR_MATCH_SEQ_OBJS) -L${PMDKSRC}/nondebug/ $(LIBS) -DSPP_OFF
+	$(CC) $(CFLAGS) $(SPP_CFLAGS) $(SPP_LDFLAGS) -o $@ $(STR_MATCH_SEQ_OBJS) -L${PMDKSRC}/nondebug/ $(LIBS) ${SPP_FLAG}
 	
 string_match-pthread: $(STR_MATCH_PTHREAD_OBJS)
-	$(CC) $(CFLAGS) -o $@ $(STR_MATCH_PTHREAD_OBJS) -L${PMDKSRC}/nondebug/ $(LIBS) -DSPP_OFF
+	$(CC) $(CFLAGS) $(SPP_CFLAGS) $(SPP_LDFLAGS) -o $@ $(STR_MATCH_PTHREAD_OBJS) -L${PMDKSRC}/nondebug/ $(LIBS) ${SPP_FLAG}
 	
 %.o: %.c
-	$(CC) $(CFLAGS) -c $< -o $@ -I$(HOME)/$(INC_DIR) -I$(HOME)/$(SRC_DIR) -I${PMDKSRC}/include/ -DSPP_OFF
+	$(CC) $(CFLAGS) $(SPP_CFLAGS) -c $< -o $@ -I$(HOME)/$(INC_DIR) -I$(HOME)/$(SRC_DIR) -I${PMDKSRC}/include/ ${SPP_FLAG}
 
 clean:
 	rm -f $(PROGS) $(STR_MATCH_OBJS) $(STR_MATCH_SEQ_OBJS) $(STR_MATCH_PTHREAD_OBJS)
